tests/build/fail/widget/invalid_properties_item.rs
use zero_ui::core::widget;

#[widget($crate::widget)]
pub mod test_widget {
    properties! {
        {}
    }
}

fn main() {}
